@@ -2,6 +2,7 @@ v.1.1.7
 	Multilingual functionality, adding languages: Bulgarian, French, Portuguese, Spanish,  Thai.
 	Fixing issue #3, replace mysql_escape_string() with str_replace. This function has been DEPRECATED as of PHP 5.3.0.
 	Fixing issue #5, set_relation with multiple fields don't work with NULL-able fields.
+	Fixing issue #6, unique_hash issue (not unique when having same method name in 2 diff. controllers).
 	Changing license. Grocery CRUD is released with dual licensing, using the GPL v3 (license-gpl3.txt) and the MIT license (license-mit.txt).
 v.1.1.6
 	New feature: Multilingual functionality.
